# tertis

./: CMakeLists.txt  README.md
src/: GameState.cpp  GameState.h  Tertis.cpp  Tertis.h  VideoDisplay.cpp  VideoDisplay.h  main.cpp
